--- a/final_version_project_planning.ipynb
+++ b/final_version_project_planning.ipynb
@@ -61,9 +61,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "287f8d52-309d-4e0e-9b46-4e66b8e1b652",
+   "metadata": {},
+   "source": [
+    "## 2) Questions\n",
+    "\n",
+    "- **Broad question**  \n",
+    "  Which kinds of players tend to play the game the most and contribute the most data?\n",
+    "\n",
+    "- **Specific question**  \n",
+    "  Can a player's experience level, age, and gender predict the total hours they spend playing on the server?\n",
+    "\n",
+    "- **How data will help**  \n",
+    "  I will use the `players.csv` dataset to figure out which player characteristics are linked to higher total gameplay time. The response variable will be `played_hours`, and the explanatory variables will include experience level, age, and gender. First, I will look at the data and visualize it to spot patterns that show which types of players tend to play the most. Then, I will convert categorical variables like `experience` and `gender` into factors so they can be used in regression models, and check for any missing values to handle them appropriately. Next, I might center and scale numeric variables like `age` and `played_hours` to improve model performance. Finally, I will split the data into training, validation, and test sets and apply either linear regression or K-nearest neighbors regression, using cross-validation to choose model parameters and avoid overfitting. This approach will help me identify the types of players who contribute the most gameplay hours.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6e29758-33a1-494f-8735-b0ddbe102e6e",
+   "id": "873c5344-0357-42a9-a9f8-912c4190b8a7",
    "metadata": {},
    "outputs": [],
    "source": []
