complete the final version with name

--- a/project_planning_Shinan.ipynb
+++ b/project_planning_Shinan.ipynb
@@ -1416,7 +1416,26 @@
    "cell_type": "markdown",
    "id": "f3a595a8-a2fb-4ca6-9ee7-e947ecfb3770",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 4) Methods and Plan\n",
+    "\n",
+    "For this project, I plan to use **K-nearest neighbors (KNN) regression** to predict how many hours a player spends on the server based on their age, experience level, and gender.\n",
+    "\n",
+    "**Why is this method appropriate:**  \n",
+    "KNN regression makes sense here because I’m trying to predict a number (`played_hours`), and I don’t think the relationship between age or experience and play time is perfectly linear. KNN is also simple to use and can capture patterns even when the relationships are a bit more complex.\n",
+    "\n",
+    "**Assumptions:**  \n",
+    "KNN doesn’t make strong assumptions about the data, but it works best when numeric variables are on a similar scale. So before running the model, I’ll standardize variables like age and played hours.\n",
+    "\n",
+    "**Potential limitations:**  \n",
+    "One issue is that KNN can be affected by noise in the data, and it can get slower if the dataset is big.\n",
+    "\n",
+    "**Model selection:**  \n",
+    "I’ll use **cross-validation** to pick the best k value by checking which one gives the lowest RMSPE.\n",
+    "\n",
+    "**Data processing plan:**  \n",
+    "I will first clean the data by handling missing values and converting categorical variables (`experience`, `gender`) into factors. Then, I split the dataset into training (70%), validation (15%), and test (15%)sets. Finally, I’ll use a tidymodels workflow to train and tune the KNN model using cross-validation, so that I can avoid overfitting and get a reliable estimate of model performance."
+   ]
   },
   {
    "cell_type": "code",
