--- a/project_planning_Shinan.ipynb
+++ b/project_planning_Shinan.ipynb
@@ -7,57 +7,23 @@
    "source": [
     "### 1) Data Description\n",
     "\n",
-    "- **Dataset overview**\n",
-    "  - Players dataset contains 196 observations and 7 variables.  \n",
-    "  - Sessions dataset contains 1535 observations and 5 variables.  \n",
-    "  - Data collected from MineCraft server logs by UBC CS research group.\n",
-    "    \n",
+    "- **Dataset overview:**  \n",
+    "  `players.csv` (196 rows, 7 variables), `sessions.csv` (1535 rows, 5 variables), collected from UBC CS MineCraft server logs.\n",
     "\n",
+    "- **Key variables in players.csv:**  \n",
+    "  - `experience` (Beginner, Amateur, Regular)  \n",
+    "  - `hashedEmail` (unique player ID)  \n",
+    "  - `gender` (Male, Female, Non-binary, etc.)  \n",
+    "  - `played_hours` (total hours played)  \n",
+    "  - `Age`  \n",
+    "  - `subscribe` (TRUE/FALSE)\n",
     "\n",
-    "- **Variables in players.csv**\n",
-    "  - **experience** (Character)  \n",
-    "    - Meaning: Level of player experience (e.g., Beginner, Amateur, Regular)  \n",
-    "    - Potential issues: These are strings, so may need to convert to factors for modeling.  \n",
-    "  - **hashedEmail** (Character)  \n",
-    "    - Meaning: This is a unique ID for each player. Both players.csv and sessions.csv have it, so we can match a player with their game sessions.  \n",
-    "    - Potential issues: Some players might have more than one account, which could mess up counts a bit.\n",
-    "  - **name** (Character)  \n",
-    "    - Meaning: Player's display name in the game   \n",
-    "  - **gender** (Character)  \n",
-    "    - Meaning: The player's gender. Most are \"Male\" or \"Female\", but there are also a few other options like Non-binary, Two-Spirited, Prefer not to say, etc.  \n",
-    "    - Potential issues: Some of the less common categories have very few players, which might make analysis tricky.\n",
-    "  - **played_hours** (Numeric)  \n",
-    "    - Description: Total hours played  \n",
-    "    - Min: 0 \n",
-    "    - Max: 223.1 \n",
-    "    - Mean: 5.85 \n",
-    "    - Median: 0.1  \n",
-    "  - **Age** (Numeric)  \n",
-    "    - Description: Age of player  \n",
-    "    - Min: 9  \n",
-    "    - Max: 58 \n",
-    "    - Mean: 21.14  \n",
-    "    - Median: 19\n",
-    "  - **subscribe** (Boolean)  \n",
-    "    - Meaning: Whether the player subscribed to the game newsletter (TRUE = subscribed, FALSE = not subscribed).  \n",
+    "- **Key variables in sessions.csv:**  \n",
+    "  - `hashedEmail`, `start_time`, `end_time`, `original_start_time`, `original_end_time`\n",
     "\n",
-    "- **Variables in sessions.csv**\n",
-    "  - **hashedEmail** (Character)  \n",
-    "    - Meaning: This is a unique ID for each player. Both players.csv and sessions.csv have it, so we can match a player with their game sessions.  \n",
-    "    - Potential issues: Some players might have more than one account, which could mess up counts a bit.  \n",
-    "  - **start_time** (Character)  \n",
-    "    - Meaning: The time when the play session started, like \"30/06/2024 18:12\".\n",
-    "  - **end_time** (Character)  \n",
-    "    - Meaning: The time when the play session ended, like \"30/06/2024 19:05\".\n",
-    "  - **original_start_time** (Double)  \n",
-    "    - Meaning: The numeric version of the session start time, stored as a big number in scientific notation like 1.71977E+12.\n",
-    "  - **original_end_time** (Double)  \n",
-    "    - Meaning: The numeric version of the session end time, stored as a big number in scientific notation.\n",
-    "  \n",
-    "\n",
-    "- **Potential issues**\n",
-    "  - Some players may have multiple accounts, which could lead to duplicate records.\n",
-    "  - If the server connection was unstable, some of the players’ actions may not have been recorded.  \n",
+    "- **Potential issues:**  \n",
+    "  - Some players might have multiple accounts, which can cause duplicates.  \n",
+    "  - Some sessions may be missing due to server issues\n",
     "\n"
    ]
   },
@@ -66,16 +32,19 @@
    "id": "0173b259-0f2c-4814-a585-bb105a556db2",
    "metadata": {},
    "source": [
-    "## 2) Questions\n",
+    "### 2) Questions\n",
     "\n",
-    "- **Broad question**  \n",
-    "  Which kinds of players tend to play the game the most and contribute the most data?\n",
+    "- **Broad question:**  \n",
+    "  Which kinds of players play most and contribute the most data?\n",
     "\n",
-    "- **Specific question**  \n",
-    "  Can a player's experience level, age, and gender predict the total hours they spend playing on the server?\n",
+    "- **Specific question:**  \n",
+    "  Can experience level, age, and gender predict total hours played?\n",
     "\n",
-    "- **How data will help**  \n",
-    "  I will use the `players.csv` dataset to figure out which player characteristics are linked to higher total gameplay time. The response variable will be `played_hours`, and the explanatory variables will include experience level, age, and gender. First, I will look at the data and visualize it to spot patterns that show which types of players tend to play the most. Then, I will convert categorical variables like `experience` and `gender` into factors so they can be used in regression models, and check for any missing values to handle them appropriately. Next, I might center and scale numeric variables like `age` and `played_hours` to improve model performance. Finally, I will split the data into training, validation, and test sets and apply either linear regression or K-nearest neighbors regression, using cross-validation to choose model parameters and avoid overfitting. This approach will help me identify the types of players who contribute the most gameplay hours.\n"
+    "- **Data usage:**  \n",
+    "  I’ll use `players.csv` to model `played_hours` as the outcome variable, with experience, age, and gender as predictors.  \n",
+    "  I'd like to explore the data and visualize it to see patterns. Then convert categorical variables to factors, check for missing values, and scale numeric variables if needed. Finally, I can split the data into training, validation, and test sets, and use regression or KNN to make predictions.\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1417,33 +1386,18 @@
    "id": "f3a595a8-a2fb-4ca6-9ee7-e947ecfb3770",
    "metadata": {},
    "source": [
-    "## 4) Methods and Plan\n",
+    "### 3) Methods and Plan\n",
     "\n",
-    "For this project, I plan to use **K-nearest neighbors (KNN) regression** to predict how many hours a player spends on the server based on their age, experience level, and gender.\n",
+    "- **Model:** K-nearest neighbors (KNN) regression to predict `played_hours` from age, experience, and gender.  \n",
     "\n",
-    "**Why is this method appropriate:**  \n",
-    "KNN regression makes sense here because I’m trying to predict a number (`played_hours`), and I don’t think the relationship between age or experience and play time is perfectly linear. KNN is also simple to use and can capture patterns even when the relationships are a bit more complex.\n",
+    "- **Why this method:** I think total play time isn’t perfectly linear with age or experience, and KNN is simple and can capture more complex patterns.  \n",
     "\n",
-    "**Assumptions:**  \n",
-    "KNN doesn’t make strong assumptions about the data, but it works best when numeric variables are on a similar scale. So before running the model, I’ll standardize variables like age and played hours.\n",
+    "- **Assumptions/Limitations:** KNN works best when numeric variables are on a similar scale. It can be affected by noisy data and can slow down if the dataset is large.  \n",
     "\n",
-    "**Potential limitations:**  \n",
-    "One issue is that KNN can be affected by noise in the data, and it can get slower if the dataset is big.\n",
+    "- **Model selection:** I’ll use cross-validation to pick the best k that gives the lowest RMSPE.  \n",
     "\n",
-    "**Model selection:**  \n",
-    "I’ll use **cross-validation** to pick the best k value by checking which one gives the lowest RMSPE.\n",
-    "\n",
-    "**Data processing plan:**  \n",
-    "I will first clean the data by handling missing values and converting categorical variables (`experience`, `gender`) into factors. Then, I split the dataset into training (70%), validation (15%), and test (15%)sets. Finally, I’ll use a tidymodels workflow to train and tune the KNN model using cross-validation, so that I can avoid overfitting and get a reliable estimate of model performance."
+    "- **Data processing:** Handle missing values, convert experience and gender to factors, scale numeric variables, split data like 70% train, and tune KNN using a tidymodels workflow to avoid overfitting and get reliable performance.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f68b9fc8-6b44-4012-87d6-76deae0cd2d8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
